# pickelmaster-django

./: .gitignore  Dockerfile  README.md  cloudbuild.yml  nginx.conf  pickelmaster_uwsgi.ini  pyproject.toml  requirements.txt
pickelmaster/: backup_01-12-23.json  backup_13-10-23.json  backup_17-11-2023.json  backup_2023_12_13.json  backup_22-10-23.json  manage.py  player.json  session.json
pickelmaster/match/: admin.py  forms.py  models.py  tables.py  urls.py  views.py
pickelmaster/match/migrations/: 0001_initial.py  0002_initial.py  0003_alter_sessionmodel_awards.py
pickelmaster/match/templates/: match_create.html  matchs.html  session.html  session_summary.html  sessions.html
pickelmaster/match/templates/includes/: custom_dt2_bootstrap4.html
pickelmaster/pickelmaster/: asgi.py  backup_01_12_23.json  settings.py  urls.py  wsgi.py
pickelmaster/player/: admin.py  apps.py  forms.py  models.py  tables.py  urls.py  views.py
pickelmaster/player/migrations/: 0001_initial.py  0002_alter_playermodel_options_playermodel_avatar.py  0003_alter_playermodel_aka.py  0004_playermodel_active.py
pickelmaster/player/templates/: home.html  player.html  players.html  session_summary.html  sessions.html
pickelmaster/templates/: base.html
pickelmaster/templates/account/: base.html  login.html  logout.html
pickelmaster/templates/account/includes/: login.html  logout.html
