[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.distutils.bdist_wheel]
universal = true

[project]
name = "pickelmaster-django"
version = "0.0.1"

authors = [
  { name="Roberto Himmelbauer", email="jawa@duck.com" }
]
description = "Pickel Ball Player Ranking"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["django", "app", "pickelball"]
dependencies = [
    "Django>=3.0",
    "django-autoslug",
    "django-extensions",
    "django-allauth",
    "django-autoslug",
    "django-environ",
    "django-crispy-forms",
    "iso4217",
    "crispy-bootstrap5",
    "toml",
    "dj-database-url",
    "django-active-link",
    "django-autoslug",
    "django-environ",
    "Pillow",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "flake8-black",
    "mypy",
    "bandit",
    "isort",
    "psycopg2-binary",
    "toml",
]
docs= [
    "recommonmark",
    "m2r",
    "django_extensions",
    "coverage",
    "Sphinx",
    "rstcheck",
    "sphinx-rtd-theme",
]

[project.urls]
"Homepage" = "https://github.com/rhimmelbauer/pickelmaster-django"
"Bug Tracker" = "https://github.com/rhimmelbauer/pickelmaster-django/issues"

[tool.setuptools.package-data]
vendor = ["templates/pickelmaster/*.html", "templates/pickelmaster/*/*.html"]
